# SlitherBOT

./: README.md  Readme.MD  pyproject.toml
slitherbot/: __init__.py  __main__.py  bot.py  cli.py  config.py  planner.py  protocol.py  state.py  strategies.py
