[project]
name = "slitherbot"
version = "0.1.0"
description = "Modular slither.io automation bot"
readme = "README.md"
authors = [{name = "Slither Bot"}]
requires-python = ">=3.9"
dependencies = [
    "websockets>=11.0",
    "pydantic>=1.10",
    "numpy>=1.24"
]

[project.scripts]
slitherbot = "slitherbot.cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
